spade-tests/src/snapshots/spade_tests__hir_lowering__tests__useful_error_message_when_passing_non_comptime_value_as_comptime.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn test() -> bool {
    let x = 0;
    $if x < 1 {
        let a_ = a;
    }
    false
}


error: Expected x to be a compile time value
  ┌─ testinput:3:9
  │
2 │     let x = 0;
  │         - x is a variable
3 │     $if x < 1 {
  │         ^ Expected a compile time value
  │
  = help: compile time values can be defined with $config <name> = value


